# zmqpbexample

./: .README.swp  .gitignore  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  config.h  config.status  configure  configure.ac  libtool
autom4te.cache/: output.1  requests  traces.0  traces.2
protobuf/: zmqpbexample.proto
src/: Makefile  Makefile.am  Makefile.in  libzmqpbexample.la  main.cc  zmqpbexample  zmqpbexample.cc  zmqpbexample.h  zmqpbexample.lo  zmqpbexample.pb.cc  zmqpbexample.pb.h  zmqpbexample.pb.lo
src/.deps/: main.Po  zmqpbexample.Plo  zmqpbexample.pb.Plo
src/.libs/: libzmqpbexample.1.dylib  libzmqpbexample.dylib  libzmqpbexample.la  libzmqpbexample.lai  libzmqpbexample.so.1.0.0  lt-zmqpbexample  zmqpbexample
